[WIP]add jpa settings